// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddEditAdmissionLocation Should display admission location form properly 1`] = `
<div
  className="main-container"
>
  <fieldset
    className="admission-location-form"
  >
    <legend>
        
      Add
       Ward  
    </legend>
    <div
      className="block-content"
    >
      <form
        onSubmit={[Function]}
      >
        <div
          className="form-block"
        >
          <label
            className="form-title inline"
          >
            Parent Location:
          </label>
          <span>
            General Ward
          </span>
        </div>
        <div
          className="form-block"
        >
          <label
            className="form-title"
          >
            Name:
          </label>
          <input
            onChange={[Function]}
            required={true}
            type="text"
            value=""
          />
        </div>
        <div
          className="form-block"
        >
          <label
            className="form-title"
          >
            Description:
          </label>
          <textarea
            cols="50"
            name="description"
            onChange={[Function]}
            rows="4"
            value=""
          />
        </div>
        <div
          className="form-block"
        >
          <input
            className="form-btn float-left margin-right"
            disabled={false}
            name="submit"
            type="submit"
            value="Save"
          />
          <input
            className="form-btn float-left"
            name="cancel"
            onClick={[Function]}
            type="button"
            value="Cancel"
          />
        </div>
      </form>
    </div>
  </fieldset>
</div>
`;

exports[`AddEditAdmissionLocation Should display admission location form properly 2`] = `
<div
  className="main-container"
>
  <fieldset
    className="admission-location-form"
  >
    <legend>
        
      Edit
       Ward  
    </legend>
    <div
      className="block-content"
    >
      <form
        onSubmit={[Function]}
      >
        <div
          className="form-block"
        >
          <label
            className="form-title inline"
          >
            Parent Location:
          </label>
          <span>
            General Ward
          </span>
        </div>
        <div
          className="form-block"
        >
          <label
            className="form-title"
          >
            Name:
          </label>
          <input
            onChange={[Function]}
            required={true}
            type="text"
            value="General Ward - Room 2"
          />
        </div>
        <div
          className="form-block"
        >
          <label
            className="form-title"
          >
            Description:
          </label>
          <textarea
            cols="50"
            name="description"
            onChange={[Function]}
            rows="4"
            value="General Ward room number 2"
          />
        </div>
        <div
          className="form-block"
        >
          <input
            className="form-btn float-left margin-right"
            disabled={false}
            name="submit"
            type="submit"
            value="Save"
          />
          <input
            className="form-btn float-left"
            name="cancel"
            onClick={[Function]}
            type="button"
            value="Cancel"
          />
        </div>
      </form>
    </div>
  </fieldset>
</div>
`;

exports[`AddEditAdmissionLocation Should display admission location form properly 3`] = `
<div
  className="main-container"
>
  <fieldset
    className="admission-location-form"
  >
    <legend>
        
      Edit
       Ward  
    </legend>
    <div
      className="block-content"
    >
      <form
        onSubmit={[Function]}
      >
        <div
          className="form-block"
        >
          <label
            className="form-title"
          >
            Parent Location:
          </label>
          <select
            name="parent-location"
            onChange={[Function]}
            value="c1e42932-3f10-11e4-adec-0800271c1b75"
          >
            <option
              value=""
            >
              None
            </option>
            <option
              key="c1e42932-3f10-11e4-adec-0800271c1b75"
              value="c1e42932-3f10-11e4-adec-0800271c1b75"
            >
              Ganiyari
            </option>
            <option
              key="c1e4950f-3f10-11e4-adec-0800271c1b75"
              value="c1e4950f-3f10-11e4-adec-0800271c1b75"
            >
              Subcenter 2 (SEM)
            </option>
            <option
              key="c1f25be5-3f10-11e4-adec-0800271c1b75"
              value="c1f25be5-3f10-11e4-adec-0800271c1b75"
            >
              Subcenter 1 (BAM)
            </option>
          </select>
        </div>
        <div
          className="form-block"
        >
          <label
            className="form-title"
          >
            Name:
          </label>
          <input
            onChange={[Function]}
            required={true}
            type="text"
            value="General Ward"
          />
        </div>
        <div
          className="form-block"
        >
          <label
            className="form-title"
          >
            Description:
          </label>
          <textarea
            cols="50"
            name="description"
            onChange={[Function]}
            rows="4"
            value="Hospital General Ward Section"
          />
        </div>
        <div
          className="form-block"
        >
          <input
            className="form-btn float-left margin-right"
            disabled={false}
            name="submit"
            type="submit"
            value="Save"
          />
          <input
            className="form-btn float-left"
            name="cancel"
            onClick={[Function]}
            type="button"
            value="Cancel"
          />
        </div>
      </form>
    </div>
  </fieldset>
</div>
`;
